[package]
name = "bontebok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.65"
url = "2.2.2"
urlencoding = "2.1.0"
